<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorWhite">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/login_account_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/login_marginTop_one_sixty_ten"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/login_marginLeft_hundred"
                android:text="@string/account"
                android:textSize="@dimen/text_size_eighteen" />

            <EditText
                android:id="@+id/login_account_edit_text"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/login_marginLeft_five"
                android:hint="@string/input_account" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/login_password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_account_layout"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/login_marginTop_five"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/login_marginLeft_hundred"
                android:text="@string/password"
                android:textSize="@dimen/text_size_eighteen" />

            <EditText
                android:id="@+id/login_password_edit_text"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/login_marginLeft_five"
                android:hint="@string/input_password" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/login_login_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:orientation="horizontal"
            android:layout_below="@+id/login_login_button"
            android:layout_alignParentStart="true">

            <CheckBox
                android:id="@+id/login_remember_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="记住账户密码"
                android:textColor="@color/colorblu"
                android:layout_marginLeft="20dp"
                android:textSize="@dimen/text_size_eighteen"/>

            <TextView
                android:background="@drawable/register_btn_bg"
                android:id="@+id/login_register_button"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:text="@string/register"
                android:textSize="@dimen/text_size_eighteen"
                 android:layout_marginLeft="90dp"
                android:gravity="center"
                android:textColor="@color/colorblue"/>
        </LinearLayout>

        <Button
            android:background="@drawable/login_btn_bg"
            android:id="@+id/login_login_button"
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/login_marginLeft_eighty"
            android:text="@string/login"
            android:textSize="@dimen/text_size_eighteen"
            android:layout_marginTop="12dp"
            android:layout_below="@+id/login_password_layout"
            android:layout_centerHorizontal="true" />
        <CheckBox
            android:id="@+id/login_protocol_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="我已阅读用户协议"
            android:textColor="@color/colorblu"
            android:layout_marginLeft="20dp"
            android:textSize="@dimen/text_size_eighteen"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="18dp"/>
    </RelativeLayout>


</LinearLayout>