<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">
        <TextView
            android:id="@+id/homepage_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="sda"
            android:gravity="center_horizontal"
            android:textSize="20dp"
            android:visibility="gone"/>
    <android.support.v4.view.ViewPager
        android:id="@+id/homepage_viewPager"
        android:layout_width="match_parent"
        android:layout_height="467dp">
<FrameLayout
    android:id="@+id/homepage_FrameLayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

</FrameLayout>
    </android.support.v4.view.ViewPager>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
       >
        <Button
            android:id="@+id/homepage_information_button"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/information_footer"
            android:background="@color/colorWhite"/>
        <Button
            android:id="@+id/homepage_linkman_button"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/linkman_footer"
            android:background="@color/colorWhite"/>
        <Button
            android:id="@+id/homepage_setting_up_button"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/setting_up_footer"
            android:background="@color/colorWhite"
            />

    </LinearLayout>
    </LinearLayout>
    <fragment
        android:background="@color/colorWhite"
        android:id="@+id/ss"
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:layout_gravity="left"
        android:name="com.example.testqq.fragment.PersonageFragment"
        tools:layout="@layout/fragment_personage" />
</android.support.v4.widget.DrawerLayout>